# pyfastscreencap

./: .gitignore  LICENSE  README.md  notes.txt  pyproject.toml
examples/: example.py
pyfastscreencap/: pyfastscreencap.py  settingsfiller.py
